frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: micro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: vijay1304/micro-frontend:latest
          resources:
              requests:
                cpu: "50m"        #
                memory: "32Mi"
              limits:
                cpu: "100m"
                memory: "64Mi"
          imagePullPolicy: Always
          ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: micro
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: micro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: vijay1304/micro-backend:latest
          resources:
              requests:
                cpu: "50m"        # ← Yeh add karo
                memory: "32Mi"
              limits:
                cpu: "100m"
                memory: "64Mi"
          imagePullPolicy: Always
          ports:
          - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: micro
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 3000


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: micro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          imagePullPolicy: Always
          ports:
          - containerPort: 27017
          volumeMounts:
          - name: mongo-storage
            mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: micro
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      targetPort: 27017
      port: 27017


---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: micro
spec:
  rules:
  - host: micro.com  # Define the host here
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
